Tech debt: remove /mobile login
