# routes/authRoutes.js
@@ -310,71 +310,6 @@ router.get('/auth/logout', (req, res) => {
   });
 });
 
-// New route for mobile login
-/**
- * @openapi
- * /auth/mobile-login:
- *    post:
- *      summary: Mobile user login
- *      requestBody:
- *        required: true
- *        content:
- *          application/json:
- *            schema:
- *              $ref: '#/components/schemas/LoginRequest'
- *      responses:
- *        200:
- *          description: Returns JWT token
- *          content:
- *            application/json:
- *              schema:
- *                $ref: '#/components/schemas/TokenResponse'
- *        400:
- *          description: Invalid credentials
- *          content:
- *            application/json:
- *              schema:
- *                type: object
- *                properties:
- *                  message:
- *                    type: string
- *        500:
- *          description: Internal server error
- *          content:
- *            application/json:
- *              schema:
- *                type: object
- *                properties:
- *                  message:
- *                    type: string
- * components:
- *   schemas:
- *    TokenResponse:
- *      type: object
- *      properties:
- *        token:
- *          type: string
- */
-router.post('/auth/mobile-login', async (req, res) => {
-  try {
-    const { username, password } = req.body;
-    const user = await User.findOne({ username: new RegExp('^'+username+'$', 'i') });
-    if (!user) {
-      return res.status(400).json({ message: 'User not found' });
-    }
-    const isMatch = await bcrypt.compare(password, user.password);
-    if (isMatch) {
-      const token = jwt.sign({ userId: user._id }, process.env.JWT_SECRET, { expiresIn: '1h' });
-      return res.json({ token });
-    } else {
-      return res.status(400).json({ message: 'Invalid credentials' });
-    }
-  } catch (error) {
-    console.error('Mobile login error:', error);
-    console.error(error.stack);
-    return res.status(500).json({ message: 'Internal server error' });
-  }
-});
 
 /**
  * @openapi
